--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-<title>Drink shit</title>
+<title>Cucumbers rule</title>
 <style>
 .hidden {
   display: none;
