Minor change, test CI flow

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ function addTurd(e){
 <br/><br/><a href='dic/xml/dictest'> Dictionary </a>
 <br/><a href='api/'> Api doc </a>
 
-<div style="text-align:right;">Blimp Eater <br/> helterskelter <img src='static/a.png' width='17' /> horse<div style="display:none">Bots suck cock</div>fucker.o<div style="display:none">And you as well</div>rg</div>
+<div style="text-align:right;">Blimp Eater <br/> helterskelter <img src='static/a.png' width='17' /> horse<div style="display:none">Bots are not welcome</div>fucker.o<div style="display:none">at all</div>rg</div>
 <button onclick='alert("Kindly go fuck yourself.")' style='float: right;margin-top:7px'>Report abuse</button>
 
 <img id='turd' class='hidden' width='50pxs' src="static/poo.png"/>
