Add link to new project

--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
 </head>
 <body>
 <marquee behavior='alternate' direction="right" style="color:green; font-size:30pt">
-<img src='static/cucumber.gif' width='30'/>I am a green cucumber <img src='static/cucumber.gif' width='30'/></marquee>
+<img src='static/cucumber.gif' width='30' alt="Dancing cucumber"/>I am a green cucumber <img src='static/cucumber.gif' width='30'/></marquee>
 
-<div style="text-align:center;"><img src='static/popov.jpg' /></div>
+<div style="text-align:center;"><img src='static/popov.jpg'  alt="Dr. Popov"/></div>
 
-
-<br/><br/><a href='dic/xml/dictest'> Dictionary </a>
-<br/><a href='api/'> Api doc </a>
+Here's my shenanigans:
+<ul style="list-style: none">
+    <li><a href='dic/xml/dictest'> Dictionary </a></li>
+    <li><a href='api/'> Api doc </a></li>
+    <li><a href='slovaro/index.html'>Slovaro</a></li>
+</ul>
 
 <div style="text-align:right;">Blimp Eater <br/> helterskelter <img src='static/a.png' width='17' /> horse<div style="display:none">Bots are not welcome</div>fucker.o<div style="display:none">at all</div>rg</div>
 
-<img id='turd' class='hidden' width='50pxs' src="static/poo.png"/>
 </body>
 </html>
