Add link to Jenkins

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ Here's my shenanigans:
     <li><a href='dic/xml/dictest'> Dictionary </a></li>
     <li><a href='api/'> Api doc </a></li>
     <li><a href='slovaro/index.html'>Slovaro</a></li>
+    <li><a href="http://178.209.46.147:8081/">Jenkins</a></li>
 </ul>
 
 <div style="text-align:right;">Blimp Eater <br/> helterskelter <img src='static/a.png' width='17' /> horse<div style="display:none">Bots are not welcome</div>fucker.o<div style="display:none">at all</div>rg</div>
